--- a/static/css/all.css
+++ b/static/css/all.css
@@ -611,7 +611,7 @@ header, footer {
 
 header {
   background-position: 30px 20px, 50% 50%;
-  background-image: url(../img/logo.svg), url(../img/hero-bg.jpg);
+  background-image: url(../img/logo.svg), url(../img/faultycat_hero.png);
   padding-bottom: 50px; }
   header .logo {
     height: 50px;
@@ -659,7 +659,7 @@ header {
     header h1 {
       padding-top: 0px; } }
 footer {
-  background-image: url(../img/logo.svg), url(../img/hero-bg.jpg); }
+  background-image: url(../img/logo.svg), url(../img/faultycat_hero.png); }
   footer .lockup {
     padding: 50px 30px; }
     footer .lockup:after {
@@ -673,13 +673,13 @@ footer {
         margin: 0;
         text-transform: uppercase;
         font-size: 12px;
-        color: rgba(0, 0, 0, 0.4); }
+        color: rgba(63, 63, 63, 0.692); }
       footer .lockup .content-wrap a {
-        color: rgba(0, 0, 0, 0.5);
+        color: rgba(152, 170, 219, 0.8);
         display: inline-block;
         margin-right: 30px; }
         footer .lockup .content-wrap a:hover {
-          color: rgba(0, 0, 0, 0.7); }
+          color: rgba(87, 0, 248, 0.432); }
 
 .face-lockup {
   max-width: 780px;
@@ -713,7 +713,7 @@ footer {
     border-radius: 50%;
     background-size: cover;
     background-position: center;
-    background-image: url(../img/avatar.jpg);
+    background-image: url(../img/avatar.png);
     height: 200px;
     width: 200px;
     -webkit-box-ordinal-group: 3;
