--- a/static/css/all.css
+++ b/static/css/all.css
@@ -567,7 +567,7 @@ body {
 /* Basic Styles
  * ------------------------------------	 */
 body {
-  background: #fff;
+  background: #ddd;
   font-size: 14px;
   line-height: 1.6;
   font-family: "Open Sans" sans-serif;
@@ -580,7 +580,7 @@ svg {
   width: 100%; }
 
 h3 {
-  color: #e1c285;
+  color: #b89c66;
   text-align: center;
   padding: 100px 0 30px; }
 
@@ -596,7 +596,7 @@ fieldset {
   background: #e5eaee;
   padding-bottom: 100px; }
   .alt-section h3 {
-    color: #d7ae5c; }
+    color: #b97f33; }
 
 h3, header nav a, header .kicker, footer .lockup .content-wrap a {
   font-size: 14px;
