Updating and adding comment

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -596,7 +596,7 @@ fieldset {
   background: #e5eaee;
   padding-bottom: 100px; }
   .alt-section h3 {
-    color: #b97f33; }
+    color: #aa6f9b; } /* Header and footer background? */
 
 h3, header nav a, header .kicker, footer .lockup .content-wrap a {
   font-size: 14px;
