--- a/static/css/all.css
+++ b/static/css/all.css
@@ -41,7 +41,7 @@ h1 {
   margin: .67em 0; }
 
 mark {
-  background: #ff0;
+  background: rgb(50, 197, 241); /* Header and footer background? */
   color: #000; }
 
 small {
@@ -596,7 +596,7 @@ fieldset {
   background: #e5eaee;
   padding-bottom: 100px; }
   .alt-section h3 {
-    color: #aa6f9b; } /* Header and footer background? */
+    color: #aa6f9b; } 
 
 h3, header nav a, header .kicker, footer .lockup .content-wrap a {
   font-size: 14px;
