--- a/static/css/all.css
+++ b/static/css/all.css
@@ -611,7 +611,7 @@ header, footer {
 
 header {
   background-position: 30px 20px, 50% 50%;
-  background-image: url(../img/logo.svg), url(../img/faultycat_hero.png);
+  background-image: url(../img/logo.svg), url(../img/fc_hero2.png);
   padding-bottom: 50px; }
   header .logo {
     height: 50px;
