--- a/static/css/all.css
+++ b/static/css/all.css
@@ -633,7 +633,7 @@ header {
     text-align: center;
     font-size: 72px;
     font-weight: 700;
-    color: white;
+    color: rgb(255, 222, 115);
     text-transform: uppercase;
     letter-spacing: 0.05em;
     margin-bottom: 20px;
@@ -646,7 +646,7 @@ header {
   header .kicker {
     text-align: center;
     letter-spacing: 0.05em;
-    color: white;
+    color: rgb(255, 239, 93);
     line-height: 1; }
 
 @media (max-width: 640px) {
@@ -659,7 +659,7 @@ header {
     header h1 {
       padding-top: 0px; } }
 footer {
-  background-image: url(../img/logo.svg), url(../img/faultycat_hero.png); }
+  background-image: url(../img/logo.svg), url(../img/fc_hero2.png); }
   footer .lockup {
     padding: 50px 30px; }
     footer .lockup:after {
@@ -673,9 +673,9 @@ footer {
         margin: 0;
         text-transform: uppercase;
         font-size: 12px;
-        color: rgba(63, 63, 63, 0.692); }
+        color: rgba(240, 227, 48, 0.692); }
       footer .lockup .content-wrap a {
-        color: rgba(63, 63, 63, 0.692);
+        color: rgba(243, 211, 71, 0.692);
         display: inline-block;
         margin-right: 30px; }
         footer .lockup .content-wrap a:hover {
