Trying to remove funny icons around my face.

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -4,7 +4,7 @@
 
     <div class="face-lockup">
         <div class="face-img"></div>
-        <div class="icon-pencil">
+        <!-- <div class="icon-pencil">
             {{ partial "icons/icon-pencil.html"}}
         </div>
         <div class="icon-mouse">
@@ -15,7 +15,7 @@
         </div>
         <div class="icon-video">
             {{ partial "icons/icon-video.html"}}
-        </div>
+        </div> -->
     </div>
 
     {{ with .Site.Params.about.bio }}
