trying to make a new svg

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -4,18 +4,18 @@
 
     <div class="face-lockup">
         <div class="face-img"></div>
-        <!-- <div class="icon-pencil">
-            {{ partial "icons/icon-pencil.html"}}
+        <div class="icon-pencil">
+            {{ partial "icons/icon-wave.html"}}
         </div>
         <div class="icon-mouse">
-            {{ partial "icons/icon-mouse.html"}}
+            {{ partial "icons/icon-wave.html"}}
         </div>
         <div class="icon-browser">
-            {{ partial "icons/icon-browser.html"}}
+            {{ partial "icons/icon-wave.html"}}
         </div>
         <div class="icon-video">
-            {{ partial "icons/icon-video.html"}}
-        </div> -->
+            {{ partial "icons/icon-wave.html"}}
+        </div>
     </div>
 
     {{ with .Site.Params.about.bio }}
