--- a/static/css/all.css
+++ b/static/css/all.css
@@ -713,7 +713,7 @@ footer {
     border-radius: 50%;
     background-size: cover;
     background-position: center;
-    background-image: url(../img/avatar.png);
+    background-image: url(../img/avatar2.png);
     height: 200px;
     width: 200px;
     -webkit-box-ordinal-group: 3;
