--- a/static/css/all.css
+++ b/static/css/all.css
@@ -626,9 +626,9 @@ header {
     header nav a {
       display: inline-block;
       margin-left: 20px;
-      color: rgba(0, 0, 0, 0.7); }
+      color: rgba(231, 194, 27, 0.7); }
       header nav a:hover {
-        color: black; }
+        color: rgb(173, 29, 125); }
   header h1 {
     text-align: center;
     font-size: 72px;
