--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,9 +8,9 @@
 		{{ partial "header.html"  . }} 
 		{{ partial "work.html"    . }}
 		{{ partial "about.html"   . }}
-		{{ partial "clients.html" . }}
-		{{ partial "contact.html" . }}
+		<!--{{ partial "clients.html" . }}-->
 		{{ partial "form.html"    . }}
+		{{ partial "contact.html" . }}
 		{{ partial "footer.html"  . }}
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
