--- a/static/css/all.css
+++ b/static/css/all.css
@@ -611,7 +611,7 @@ header, footer {
 
 header {
   background-position: 30px 20px, 50% 50%;
-  background-image: url(../img/logo.svg), url(../img/fc_hero2.png);
+  background-image: url(../img/fc_hero2.png), url(../img/logo.svg);
   padding-bottom: 50px; }
   header .logo {
     height: 50px;
@@ -659,7 +659,7 @@ header {
     header h1 {
       padding-top: 0px; } }
 footer {
-  background-image: url(../img/logo.svg), url(../img/fc_hero2.png); }
+  background-image: url(../img/fc_hero2.png), url(../img/logo.svg); }
   footer .lockup {
     padding: 50px 30px; }
     footer .lockup:after {
