Change overlay mode

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -605,9 +605,9 @@ h3, header nav a, header .kicker, footer .lockup .content-wrap a {
 
 header, footer {
   background-repeat: no-repeat, no-repeat;
-  background-size: 50px 50px, contain;
+  background-size: 50px 50px, cover;
   background-position: 30px 50px, 50% 50%;
-  background-blend-mode: overlay, normal; }
+  background-blend-mode: normal, normal; }
 
 header {
   background-position: 30px 20px, 50% 50%;
