--- a/static/css/all.css
+++ b/static/css/all.css
@@ -576,8 +576,8 @@ body {
   -webkit-text-size-adjust: 100%; }
 
 svg {
-  height: 100%;
-  width: 100%; }
+  height: 150%;
+  width: 150%; }
 
 h3 {
   color: #b89c66;
@@ -593,10 +593,10 @@ fieldset {
   h3 {
     padding: 50px 0 50px; } }
 .alt-section {
-  background: #e5eaee;
+  background: #363737;
   padding-bottom: 100px; }
   .alt-section h3 {
-    color: #aa6f9b; } 
+    color: #cdacc5; } 
 
 h3, header nav a, header .kicker, footer .lockup .content-wrap a {
   font-size: 18px;
