Re-add clients for services trial

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 		{{ partial "header.html"  . }} 
 		{{ partial "work.html"    . }}
 		{{ partial "about.html"   . }}
-		<!--{{ partial "clients.html" . }}-->
+		{{ partial "clients.html" . }}
 		{{ partial "contact.html" . }}
 		{{ partial "form.html"    . }}
 		{{ partial "footer.html"  . }}
