Commit new clients html

--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -16,7 +16,7 @@
     {{ range $i, $e := .Site.Data.clients.list }}
     <div class="client-unit {{ if eq $i 0 }}active-client{{ end }}">   <!-- CONDITIONAL CSS CLASS -->
         <figure class="client-face">
-            <img src="img/clients/{{ .avatar }}" alt="client-face">
+            <!-- <img src="img/clients/{{ .avatar }}" alt="client-face"> -->
             <figcaption>
                 <strong class="client-name">{{ .name }}</strong>
                 <em class="client-title">{{ .title }}</em>
@@ -35,7 +35,7 @@
         <div class="client-control-prev">{{ partial "icons/icon-prev.html" . }}</div>
     </div>
 
-    <div class="clients-logos">
+    <!-- <div class="clients-logos">
     {{ range $i, $e := .Site.Data.clients.list }}
       	{{ if eq $i 0 }}
        	<img class="client-logo active-client" src="img/clients/{{ .logo }}" align="{{ .logo }}">
@@ -43,6 +43,6 @@
     	<img class="client-logo" src="img/clients/{{ .logo }}" align="{{ .logo }}">
        	{{ end }}
     {{ end }}
-    </div>
+    </div> -->
 
 </section>
