Update clients.html to services heading

--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -1,6 +1,6 @@
 {{ "<!-- Clients section -->" | safeHTML }}
 <section class="section-clients">
-    {{ with .Site.Data.clients.title }}<h3 id="clients">{{ . }}</h3>{{ end }}
+    {{ with .Site.Data.clients.title }}<h3 id="services">{{ . }}</h3>{{ end }}
 
     <div class="clients-mobile-nav">
     {{ range $i, $e := .Site.Data.clients.list }}
