--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
             <nav>
                 {{ with .Site.Params.about.title }}<a href="#about-me">{{ . }}</a>{{ end }}
                 {{ with .Site.Data.work.title }}<a href="#work">{{ . }}</a>{{ end }}
-                {{ with .Site.Params.clients.title }}<a href="#clients">{{ . }}</a>{{ end }}
+                {{ with .Site.Params.clients.title }}<a href="#services">{{ . }}</a>{{ end }}
                 {{ with .Site.Params.contact.title }}<a href="#contact">{{ . }}</a>{{ end }}
             </nav>
             <p class="copyright">{{ with .Site.Params.footer.copyright }}{{ . }}{{ else }}All content copyright {{now.Format "2006"}} {{ end }}</p>
